<resources>
    <string name="app_name">Quotes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="placeholder_quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="copy_quote_to_clipboard">Copy quote to clipboard</string>
    <string name="save_as_image">Save as image</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="liked_quotes">Liked quotes</string>
    <string name="categories_menu">Categories</string>
    <string name="reminders_menu">Reminders</string>
    <string name="widgets_menu">Widgets</string>
    <string name="rate_us">Rate us</string>
    <string name="share_this_app">Share this app</string>
    <string name="send_feedback">Send feedback</string>
    <string name="privacy_policy">Privacy policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="themes">Themes</string>
    <string name="background">Background</string>
    <string name="fonts">Fonts</string>
    <string name="abcd">abcd</string>
    <string name="next">Next</string>
    <string name="select_a_theme_and_tap_on_next_button">Select a theme and tap on next button</string>
    <string name="no_internet">No internet</string>
    <string name="no_internet_msg">You\'re not connected to internet. Please connect to internet!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="internal_server_error_message">It may an internal server error. Please try again!</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>