<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/share_with_your_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_share_24"
            android:layout_margin="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_with_your_friends"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/copy_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_content_copy_24"
            android:layout_margin="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_quote_to_clipboard"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/save_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_download_24"
            android:layout_margin="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_as_image"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_as_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_wallpaper_24"
            android:layout_margin="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_as_wallpaper"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>